<resources>
    <string name="server_ip">172.16.81.130</string>
    <string name="app_name">LazyParking</string>
    <string name="username_hint">username</string>
    <string name="password_hint">password</string>
    <string name="change_password_menu">Change Password</string>
    <string name="log_out_menu">Log Out</string>
    <string name="add_driver_menu">Add Driver</string>
    <string name="change_driver_expiration_date_menu">Change Driver Expiration Date</string>
    <string name="remove_driver_menu">Remove Driver</string>
    <string name="expired_users_report_menu">Expired Users Report</string>
    <string name="open_gate_menu">Open Gate</string>
    <string name="reserved_for_message">Reserved for:</string>
    <string name="server_port">7000</string>
    <string name="login_error_message">WRONG USERNAME OR PASSWORD</string>
    <string name="username_pw_not_empty_msg">the username and password must not be empty</string>
    <string name="send_email">Send Email</string>
    <string name="make_photo">Send Email with photo</string>
    <string name="camera_permission">Permission DENIED</string>
    <string name="choose_email_client">Choose an email client</string>
    <string name="change_password_in_dialog">Change Password</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="please_enter_new_password">Please enter new password</string>
    <string name="change_password_title">Change Password</string>
    <string name="password_change_success_message">Password changed successfully</string>
    <string name="password_change_fail_message">failed to change password</string>
    <string name="password_mustnt_be_empty_message">the password must not be empty</string>
    <string name="permission_denied_message">Permission DENIED</string>
    <string name="email">placeholder@gmail.com</string>
    <string name="change_driver_expiration_title">Change Driver Expiration Date</string>
    <string name="expiration_date_changed_success_message">expiration date changed successfully</string>
    <string name="username_not_found_message">username not found</string>
    <string name="date_expired_message">date expired</string>
    <string name="username_mustnt_be_empty_message">the username must not be empty</string>
    <string name="unlimited_expiration_date_tag">Unlimited Expiration Date</string>
    <string name="add_driver_title">Add Driver</string>
    <string name="first_and_last_names_message">first and last names</string>
    <string name="name_pw_not_empty_msg">the name and password must not be empty</string>
    <string name="add_driver_instructions">enter the driver\'s first and last names. each name has to be at least 2 letters long and must include only letters</string>
    <string name="names_too_long_message">the combined length of the first and last names must not exceed 20 letters</string>
    <string name="add_driver_popup_title">Driver Credentials</string>
    <string name="card_key_str">card key</string>
    <string name="change_password_for_a_driver">Change password for a driver</string>
    <string name="driver_removed_message">driver removed successfully</string>
    <string name="remove_driver_fail_message">username not found or you do not have high enough permission to remove this user</string>
    <string name="reserve_for_tag">Reserve for</string>
    <string name="reserve_parking_spot_title">Reserve Parking Spot</string>
    <string name="you_are_reserving_parking_spot_message">You are reserving parking spot</string>
    <string name="reservation_error_message">the name of the person/group for whom the parking spot is reserved must not exceed 20 characters and can\'t be empty</string>
    <string name="reservation_success_message">parking spot reserved successfully</string>
    <string name="reservation_expired_message">date expired</string>
    <string name="invalid_chars_message">only english letters and spaces are allowed</string>
    <string name="cancel_reservation_title">Cancel Reservation</string>
    <string name="cancel_reservation_message">You are cancelling the reservation for parking spot</string>
    <string name="reservation_cancelled_message">reservation cancelled</string>
    <string name="expiration_date_title">expiration date</string>
    <string name="choose_action_title">Choose action</string>
    <string name="update_expiration_button_text">update expiration date</string>
    <string name="remove_driver_button_text">remove driver</string>
    <string name="confirmation_message">are you sure you want to delete this driver?</string>
    <string name="advance_settings_menu">Advanced Settings</string>
    <string name="shared_prefs_filename">com.example.lazyparking.shared_prefs</string>
    <string name="new_ip_address_hint">new IP address (optional)</string>
    <string name="new_port_hint">new port number (optional)</string>
</resources>
